# FinAdvisor

./: .env.example  .gitignore  CLAUDE.local.md  CLAUDE.md  README.md  TODO.md  architecture.md  docker-compose.override.yml  docker-compose.yml  mvp.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/agents/: compliance-reviewer.md
.claude/commands/: check.md  demo.md  eval.md  (+4 more)
Story-Reports/: 0.1-init-python-backend.md  0.2-init-nextjs-frontend.md  0.3-docker-compose.md  0.4-git-hygiene-linting.md  0.5-ci-workflows.md  1.1-postgresql-schema.md  1.2-sqlalchemy-orm-models.md  1.3-session-rls-helpers.md  1.4-database-integration-test.md  2.1-synthetic-corpus-generator.md  2.2-pii-redaction-module.md  2.3-voyage-embeddings-client.md  2.4-ingest-pipeline.md  3.1-mock-users-jwt.md  3.2-auth-middleware.md  3.3-rls-e2e-verification.md  4.1-search-firm-kb.md  4.2-lookup-suitability-rule.md  4.3-lookup-product-factsheet.md  4.4-escalate-to-compliance.md  4.5-tool-registry-di-wiring.md  4.6-agent-orchestrator.md  5.1-litellm-proxy-configuration.md  5.2-kong-ai-gateway.md  5.3-fallback-chain-verification.md  6.1-app-factory-health-endpoint.md  6.2-sse-streaming-endpoint.md  6.3-structured-logging-error-handling.md  6.4-backend-integration-tests.md  7.1-layout-user-switcher.md  7.2-chat-interface-sse-streaming.md  7.3-citation-system.md  7.4-ui-polish-responsive.md  8.1-langfuse-integration.md  8.2-golden-qa-eval-set.md  8.3-eval-runner-script.md  9.1-github-actions-eval-gate.md  9.2-terraform-iac.md  9.3-documentation-demo-script.md
backend/: Dockerfile  pyproject.toml  ruff.toml
backend/db/: schema.sql
backend/scripts/: generate_corpus.py  ingest.py  run_eval.py  test_fallback_live.py
backend/src/: cli.py  config.py  dependencies.py  errors.py  main.py
backend/src/agent/: orchestrator.py  system_prompt.py  types.py
backend/src/agent/tools/: __init__.py  escalate.py  lookup_factsheet.py  lookup_suitability.py  search_kb.py
backend/src/api/: chat.py  health.py  router.py  schemas.py
backend/src/auth/: jwt.py  mock_users.py  models.py
backend/src/db/: models.py  rls.py  session.py
backend/src/observability/: logging.py  tracing.py
backend/src/pii/: __init__.py  fallback.py  redactor.py
backend/src/retrieval/: embeddings.py  vector_store.py
backend/tests/: conftest.py  test_agent.py  test_auth.py  test_chat_stream.py  test_embeddings.py  test_escalate.py  test_eval_runner.py  test_fallback_chain.py  test_integration.py  test_logging.py  test_lookup_factsheet.py  test_lookup_suitability.py  test_pii.py  test_rls.py  test_rls_context.py  test_rls_e2e.py  test_search_kb.py  test_tool_registry.py  test_tracing.py
docs/: demo_script.md  threat_model.md
frontend/: package-lock.json  package.json  tailwind.config.ts
kong/: Dockerfile  kong.yml
langfuse/: docker-compose.langfuse.yml
litellm/: config.yaml
terraform/: artifact_registry.tf  cloud_run.tf  cloud_sql.tf  cloud_storage.tf  iam.tf  main.tf  outputs.tf  secrets.tf  variables.tf
(+74 files in other folders)
