[tool.poetry]
name = "finadvisor-backend"
version = "0.1.0"
description = "Compliance-Aware Wealth Advisor RAG Assistant"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = ">=0.115.0"
uvicorn = {version = ">=0.30.0", extras = ["standard"]}
sqlalchemy = {version = ">=2.0.0", extras = ["asyncio"]}
asyncpg = ">=0.29.0"
pydantic-settings = ">=2.0.0"
anthropic = ">=0.40.0"
voyageai = ">=0.3.0"
langfuse = ">=2.0.0"
structlog = ">=24.0.0"
sse-starlette = ">=2.0.0"
python-jose = {version = ">=3.3.0", extras = ["cryptography"]}
google-cloud-dlp = ">=3.0.0"
pgvector = ">=0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.24.0"
ruff = ">=0.7.0"
mypy = ">=1.11.0"
httpx = ">=0.27.0"

[tool.poetry.scripts]
finadvisor = "src.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "voyageai.*",
    "langfuse.*",
    "google.cloud.*",
    "jose.*",
    "sse_starlette.*",
    "pgvector.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
